// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuildCard Should render properly with a guild address 1`] = `
<div>
   
  <a
    class="sc-bdfBQB hcWJCy"
    data-testid="guildCard"
    href="//0xa47BbE8Dd6dB29D45FE5eeD838c4f136884AEAF3"
  >
    <div
      class="sc-gsTEea sc-jSgvzq couiEk iwIEDV"
    >
      <div
        class="sc-gsTEea couiEk"
      >
        <div
          class="sc-hKgJUU sc-fubCzh dUEGLL kcknnR"
        />
        <div
          class="sc-gsTEea sc-pGacB couiEk lfrSjv"
        />
      </div>
    </div>
  </a>
   
</div>
`;

exports[`GuildCard Should render properly with a null guild address 1`] = `
<div>
   
  <a
    class="sc-bdfBQB hcWJCy"
    data-testid="guildCard"
    href="//null"
  >
    <div
      class="sc-gsTEea sc-jSgvzq couiEk iwIEDV"
    >
      <div
        class="sc-gsTEea couiEk"
      >
        <div
          class="sc-hKgJUU sc-fubCzh dUEGLL kcknnR"
        />
        <div
          class="sc-gsTEea sc-pGacB couiEk lfrSjv"
        />
      </div>
    </div>
  </a>
   
</div>
`;
